--- a/CodeTemplates/PandasFundumentals.ipynb
+++ b/CodeTemplates/PandasFundumentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e01a13e1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ac2901e5",
    "metadata": {},
    "outputs": [],
@@ -1622,8 +1622,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "22d58292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newRow = pd.read_csv(\"PirateNewRow.csv\")\n",
+    "combined_df = pd."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c27b4d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newCol = pd.read_csv(\"PirateNewColumn.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "821a7067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pirate_df = pd.read_csv(\"pirates.csv\")\n",
+    "PirateNewColumn_df = pd.read_csv(\"PirateNewColumn.csv\")\n",
+    "\n",
+    "\n",
+    "combined_df = pd.concat([pirate_df, PirateNewColumn_df], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "combined_df.to_csv('combined_pirates.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "074dadfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   id            1000 non-null   int64 \n",
+      " 1   favorite.sea  1000 non-null   object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 15.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dde80056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.merge(combined_df,newCol, on= 'id',how = 'inner')"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "34800899",
+   "metadata": {},
+   "source": [
+    "merged_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cc014ad6",
+   "id": "cc70fd64",
    "metadata": {},
    "outputs": [],
    "source": []
